# Tik-Tac-Toe-ImGui

./: CMakeLists.txt  CMakeSettings.json  main.cpp
libs/glfw/: CMakeLists.txt
libs/glfw/thelib/: glfw3.lib
libs/imguiInc/: CMakeLists.txt
libs/imguiLib/: imgui.lib
linbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini  tik-tak-toe-imgui
winbuild/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini  tik-tak-toe-imgui.sln  tik-tak-toe-imgui.vcxproj  tik-tak-toe-imgui.vcxproj.filters
winbuild/tik-tak-toe-imgui.dir/Release/: tik-tak-toe-imgui.exe.recipe
winbuild/tik-tak-toe-imgui.dir/Release/tik-tak-.B3278C07.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tik-tak-toe-imgui.lastbuildstate
winbuild/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
winbuild/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
winbuild/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
winbuild/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
